--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -60,3 +60,11 @@
     color: #333333;
   }
 }
+.complete-order-btn {
+  border: 1px solid black;
+  padding: 7px 20px;
+  color: black;
+  border-radius: 10px;
+  font-size: 12px;
+  font-weight: 700;
+}
